--- a/style.css
+++ b/style.css
@@ -6,3 +6,5 @@ body{ background-color: rgb(198, 181, 155);margin: 0%;}
 h1{font-size: 60px; margin: 30px;}
 p{font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;}
 a{text-decoration: none;} 
+a .email{ color: aquamarine;}
+a .insta{color:lightcoral;}
